// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rounds matches snapshot 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<!--v-if-->
<div class=\\"ipl-expansion-panel__content\\">
  <div class=\\"ipl-expansion-panel__header layout horizontal center-vertical\\">
    <div class=\\"ipl-expansion-panel__header-background\\"></div>
    <div class=\\"ipl-expansion-panel__title\\">Create Round</div>
    <font-awesome-icon-stub icon=\\"chevron-left\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"icon\\"></font-awesome-icon-stub>
    <div class=\\"header-extra\\"></div>
  </div>
  <div class=\\"content\\" style=\\"display: none;\\">
    <div class=\\"layout horizontal\\">
      <ipl-button-stub label=\\"3 Games\\" color=\\"green\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" data-test=\\"new-3-game-round\\"></ipl-button-stub>
      <ipl-button-stub label=\\"5 Games\\" color=\\"green\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" class=\\"m-l-6\\" data-test=\\"new-5-game-round\\"></ipl-button-stub>
    </div>
    <ipl-button-stub label=\\"7 Games\\" color=\\"green\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" class=\\"m-t-6\\" data-test=\\"new-7-game-round\\"></ipl-button-stub>
  </div>
</div>
<div class=\\"ipl-space color-dark layout horizontal center-vertical round-menu-space m-t-8\\" data-test=\\"open-all-rounds-sidebar\\">
  <font-awesome-icon-stub icon=\\"bars\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"menu-icon\\"></font-awesome-icon-stub> All Rounds
</div>
<round-editor-stub roundid=\\"2426\\" round=\\"[object Object]\\" isnewround=\\"false\\" class=\\"m-t-8\\" data-test=\\"round-editor\\"></round-editor-stub>"
`;

exports[`Rounds matches snapshot when round sidebar is open 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"ipl-sidebar__wrapper sidebar-transition-enter-from sidebar-transition-enter-active\\">
  <div class=\\"background\\"></div>
  <div class=\\"content\\">
    <div class=\\"ipl-space color-light\\">
      <ipl-button-stub label=\\"Reset rounds\\" color=\\"red\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"true\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" data-test=\\"reset-rounds-button\\"></ipl-button-stub>
    </div>
    <div class=\\"ipl-space color-light layout horizontal m-t-8\\">
      <div class=\\"color-key color-key-active\\"></div> Active <div class=\\"color-key color-key-next\\"></div> Next
    </div>
    <div class=\\"ipl-space color-light m-t-8 round-option selected is-next-round\\" data-test=\\"round-option-2426\\">dope round the third</div>
    <div class=\\"ipl-space color-light m-t-8 round-option is-active-round\\" data-test=\\"round-option-9573\\">dope round the second</div>
    <div class=\\"ipl-space color-light m-t-8 round-option\\" data-test=\\"round-option-0387\\">dope round</div>
  </div>
</div>
<div class=\\"ipl-expansion-panel__content\\">
  <div class=\\"ipl-expansion-panel__header layout horizontal center-vertical\\">
    <div class=\\"ipl-expansion-panel__header-background\\"></div>
    <div class=\\"ipl-expansion-panel__title\\">Create Round</div>
    <font-awesome-icon-stub icon=\\"chevron-left\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"icon\\"></font-awesome-icon-stub>
    <div class=\\"header-extra\\"></div>
  </div>
  <div class=\\"content\\" style=\\"display: none;\\">
    <div class=\\"layout horizontal\\">
      <ipl-button-stub label=\\"3 Games\\" color=\\"green\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" data-test=\\"new-3-game-round\\"></ipl-button-stub>
      <ipl-button-stub label=\\"5 Games\\" color=\\"green\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" class=\\"m-l-6\\" data-test=\\"new-5-game-round\\"></ipl-button-stub>
    </div>
    <ipl-button-stub label=\\"7 Games\\" color=\\"green\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" class=\\"m-t-6\\" data-test=\\"new-7-game-round\\"></ipl-button-stub>
  </div>
</div>
<div class=\\"ipl-space color-dark layout horizontal center-vertical round-menu-space m-t-8\\" data-test=\\"open-all-rounds-sidebar\\">
  <font-awesome-icon-stub icon=\\"bars\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"menu-icon\\"></font-awesome-icon-stub> All Rounds
</div>
<round-editor-stub roundid=\\"2426\\" round=\\"[object Object]\\" isnewround=\\"false\\" class=\\"m-t-8\\" data-test=\\"round-editor\\"></round-editor-stub>"
`;
